@@ -64,6 +64,7 @@
 		<script type="text/javascript" src="js/units/bion.js"></script>
 		<script type="text/javascript" src="js/units/exterminator.js"></script>
 		<script type="text/javascript" src="js/units/scout_runner.js"></script>
+		<script type="text/javascript" src="js/units/invader_transport.js"></script>
 		
 		<script type="text/javascript" src="js/actions_heap.js"></script>
 		<script type="text/javascript" src="js/construct_queue.js"></script>
