@@ -24,7 +24,7 @@ var InterfaceEnergyWaterDraw = {
 			//Make sound every 15 sec
 			if ((time - this._last_sound_notification) > 15000)
 			{
-				InterfaceSoundQueue.addSound((this._current-this._max > 250) ? 'power_critical' : 'low_power');
+				//InterfaceSoundQueue.addSound((this._current-this._max > 250) ? 'power_critical' : 'low_power');
 				this._last_sound_notification = time;
 			}
 		}
