@@ -2387,7 +2387,7 @@ function Level1()
 		game.players[PLAYER_HUMAN] = new Player('#ffffbb', true);
 		game.players[PLAYER_COMPUTER1] = new Player('#fc3c58', false);
 		
-		AbstractUnit.createNew(ConstructionRigUnit, 63, 4, PLAYER_HUMAN, true);
+		AbstractUnit.createNew(InvaderTransportUnit, 63, 4, PLAYER_HUMAN, true);
 		AbstractUnit.createNew(ConstructionRigUnit, 66, 4, PLAYER_HUMAN, true);
 		AbstractUnit.createNew(ConstructionRigUnit, 64, 6, PLAYER_HUMAN, true);
 		
@@ -2411,7 +2411,7 @@ function Level1()
 		return [
 			ConstructionRigUnit, FreighterUnit, HoverFreighterUnit, 
 			GuardianUnit, BionUnit, ExterminatorUnit,
-			ScoutRunnerUnit
+			ScoutRunnerUnit, InvaderTransportUnit
 		];
 	};
 	
