@@ -288,6 +288,7 @@ FreighterUnit.cost = 1000;
 FreighterUnit.health_max = 750;
 FreighterUnit.speed = 1.5;
 FreighterUnit.shield_type = 'TankPlatingWet';
+FreighterUnit.mass = 10;
 
 FreighterUnit.require_building = [AssemblyPlantBuilding];
 
